# wgpeerd

./: CMakeLists.txt  PKGBUILD
src/client/: CMakeLists.txt  args.c  args.h  client.c  client.h  fwd.c  fwd.h  main.c
src/common/: CMakeLists.txt  log.c  log.h  mem.c  mem.h  memory.c  memory.h  net.c  net.h  packets.c  packets.h  socket.c  socket.h  wgutil.c  wgutil.h
src/server/: CMakeLists.txt  args.c  args.h  main.c  server.c  server.h
wireguard/: CMakeLists.txt
