set(CLIENT_SOURCES
    args.c
    fwd.c
    main.c
    client.c
)

set(CLIENT_LIBRARIES
    ${WIREGUARD_LIBRARY}
    ${COMMON_LIBRARY}
)

set(CLIENT_INCLUDES
    ${WIREGUARD_INCLUDES}
    ${COMMON_INCLUDES}
)

set(CLIENT_EXECUTABLE wgpeerc)

add_executable(${CLIENT_EXECUTABLE} ${CLIENT_SOURCES})

target_link_libraries(${CLIENT_EXECUTABLE} ${CLIENT_LIBRARIES})
target_include_directories(${CLIENT_EXECUTABLE} PRIVATE ${CLIENT_INCLUDES})

install(TARGETS ${CLIENT_EXECUTABLE} DESTINATION bin)
