set(SERVER_SOURCES
    args.c
    main.c
    server.c
)

set(SERVER_LIBRARIES
    ${WIREGUARD_LIBRARY}
    ${COMMON_LIBRARY}
)

set(SERVER_INCLUDES
    ${WIREGUARD_INCLUDES}
    ${COMMON_INCLUDES}
)

set(SERVER_EXECUTABLE wgpeerd)

add_executable(${SERVER_EXECUTABLE} ${SERVER_SOURCES})

target_link_libraries(${SERVER_EXECUTABLE} ${SERVER_LIBRARIES})
target_include_directories(${SERVER_EXECUTABLE} PRIVATE ${SERVER_INCLUDES})

install(TARGETS ${SERVER_EXECUTABLE} DESTINATION bin)
